#projects/security/pressure_ulcer/intel_perceptual_sdk/exec/CMakeLists.txt 

INCLUDE_DIRECTORIES( ${VXL_OXL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_BRL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_GEL_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${VXL_RPL_INCLUDE_DIR} )

IF (PCSDK_FOUND)
    
    ADD_DEFINITIONS( -DGEVXL_DEPTH_HAS_INTEL_PERCEPTUAL_SDK )
    
    #INCLUDE_DIRECTORIES( ${PCSDK_INCLUDE_DIRS} )
    INCLUDE_DIRECTORIES(${PCSDK_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(${PCSDK_COMMON_INCLUDE_DIR})
    
    ADD_EXECUTABLE( pu_intel_perceptual_sdk_exp01 pu_intel_perceptual_sdk_exp01.cxx )
    
    TARGET_LINK_LIBRARIES( pu_intel_perceptual_sdk_exp01 ${PCSDK_LIBS} )

    #SET_TARGET_PROPERTIES(pu_intel_perceptual_sdk_exp01 PROPERTIES LINK_FLAGS /NODEFAULTLIB:LIBCMT,/FORCE:MULTIPLE)

ENDIF (PCSDK_FOUND)



